# FletNotification

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: fix_manifest.py
src/: flet_post_notification.py  main.py
src/flet_post_notification/: __init__.py  flet_post_notification.py
